objects/OpportunityClause__c.object
<CustomObject>
    <description>&lt;OPC&gt; - Represents a clause applied to a deal.</description>
    <fields>
        <fullName>AcceptedAmount__c</fullName>
        <formula>CASE(ReferencedClause__r.SectionTitle__c, 
&apos;A) Annual Minimum Rent&apos;, Opportunity__r.AnnualMinimumRent__c,
&apos;D) Promotion Levy&apos;,Opportunity__r.TotalPromotionLevy__c,
&apos;E) Percentage Rent&apos;,Opportunity__r.PercentageRentPercent__c
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accepted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClauseDetails__c</fullName>
        <inlineHelpText>Please enter the information required.</inlineHelpText>
        <label>Clause Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CounterAmount__c</fullName>
        <label>Counter Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CounterDate__c</fullName>
        <label>Counter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveFromDate__c</fullName>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>High_Risk_Clause__c</fullName>
        <description>This is to be used for reporting purpose. Refers to the high risk clause from clause library</description>
        <formula>ReferencedClause__r.HighRiskClause__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High Risk Clause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAutomated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Automated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeasingComment__c</fullName>
        <inlineHelpText>Please provide reasons why this clause is required on an Opportunity.</inlineHelpText>
        <label>Leasing Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Clauses</relationshipLabel>
        <relationshipName>Opportunity_Clauses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReasonRecommendation__c</fullName>
        <inlineHelpText>Retail Admin Use Only.</inlineHelpText>
        <label>Reason Recommendation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReferencedClause__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referenced Clause</label>
        <referenceTo>ClauseLibrary__c</referenceTo>
        <relationshipLabel>Opportunity Clause</relationshipLabel>
        <relationshipName>Opportunity_Clauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RiskApplies__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This flag is ticked if there is a risk applied Clause associated with this space. Please contact Retail Admin for any questions.</inlineHelpText>
        <label>Risk Applies?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <description>This is the sub type of the clause. It&apos;s dependent on type of clause</description>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>ClauseSubType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_RiskLevel__c</fullName>
        <formula>TEXT(ReferencedClause__r.RiskLevel__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_RiskLevel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMImportDateTime__c</fullName>
        <label>Tech_DMImportDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TechDMOriginalSourceSystem__c</fullName>
        <label>Tech_DMOriginalSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMReleaseNo__c</fullName>
        <label>Tech_DMReleaseNo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceID__c</fullName>
        <label>Tech_DMSourceID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceSystem__c</fullName>
        <label>Tech_DMSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMXREFId__c</fullName>
        <label>Tech_DMXREF_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechPrecedentClauseId__c</fullName>
        <label>Tech_PrecedentClauseId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ClauseType</valueSetName>
        </valueSet>
    </fields>
    <label>Opportunity Clause</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opportunity Clauses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Clauses</pluralLabel>
    <recordTypes>
        <fullName>OPC_LeasingClause</fullName>
        <active>true</active>
        <description>Deal specific clauses</description>
        <label>Leasing Clause</label>
    </recordTypes>
    <recordTypes>
        <fullName>OPC_PrecedentClause</fullName>
        <active>true</active>
        <description>Account specific clauses</description>
        <label>Precedent Clause</label>
    </recordTypes>
    <recordTypes>
        <fullName>OPC_StandardResponseClause</fullName>
        <active>true</active>
        <description>Record type to list all clauses for Acceptance and Counter offer letter</description>
        <label>Standard Response Clause</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>OPC_LockClauseDetailWhenSpecialType</fullName>
        <active>false</active>
        <description>stop the user to edit the Clause Details when the type is Special Condition.</description>
        <errorConditionFormula>AND(ISCHANGED( ClauseDetails__c ),  
OR(TEXT( Type__c ) = &apos;Special Condition&apos;,TEXT( Type__c ) = &apos;RCA&apos;),
 $Profile.Name = &apos;SCG-Retail Lease&apos;)</errorConditionFormula>
        <errorMessage>Can not edit the clause details because type is special condition</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OPC_LockFieldsonDealAchieved</fullName>
        <active>true</active>
        <description>The system must prevent Users from modifying key details on the Opportunity Record once the deal is achieved</description>
        <errorConditionFormula>AND(Opportunity__r.DealAchieved__c,$Profile.Name &lt;&gt; &quot;SCG-Sys DataMigration&quot;,$Profile.Name &lt;&gt; &quot;SCG-Sys Integration&quot;,
ISPICKVAL(Type__c,&quot;Usage&quot;),
ISCHANGED(ClauseDetails__c))</errorConditionFormula>
        <errorMessage>You cannot modify a number of key fields within the Opportunity Record once the deal has been achieved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OPC_RequiredReasonRecommendation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	NOT(IsAutomated__c),
	ReferencedClause__r.HighRiskClause__c,
	OR(
		ReasonRecommendation__c == ReferencedClause__r.ReasonRecommendation__c,
		ISNULL(ReasonRecommendation__c),
		ISBLANK(ReasonRecommendation__c)
	)
)</errorConditionFormula>
        <errorDisplayField>ReasonRecommendation__c</errorDisplayField>
        <errorMessage>The following condition/s require risk approval, please provide your recommendation/input for approval before submitting your request</errorMessage>
    </validationRules>
</CustomObject>